<resources>
    <string name="app_name">Ryerson University Social</string>
    
    <!-- Button Strings -->
    <string name="BtnBack">Back Button</string>
    <string name="BtnLookAround">Look Around</string>
    <string name="BtnProfile">Profile</string>
    <string name="BtnMessage">Message</string>
    <string name="BtnMessages">Messages</string>
	<string name="BtnFriendsList">Friends List</string>
	<string name="BtnPreferences">Preferences</string>
    <string name="BtnDummy">Dummy Feature</string>
    <string name="BtnSocialiteMap">Map View</string>
    <string name="BtnSocialiteList">List View</string>
    <string name="BtnSubmit">Submit</string>
    <string name="BtnRegister">Register</string>
    <string name="BtnSave">Save</string>
    <string name="BtnUpload">Upload</string>
    <string name="BtnSend">Send</string>
    <string name="BtnRequest">Add Friend</string>
    
    <!--  TextView Strings -->
	<string name="TVLogin">>login</string>
	<string name="TVRegister">>register</string>
	<string name="TVSocialiteList">>socialite list</string>
	<string name="TVSocialiteMap">>socialite map view</string>
	<string name="TVName">Name</string>
	<string name="TVPreference">>preferences</string>
	<string name="TVProfile">>profile</string>
	<string name="TVAbout">Status Update</string>
	<string name="TVEmail">E-mail</string>
	<string name="TVDate">March 12, 2013</string>
	<string name="TVFriendsList">>friends list</string>
	<string name="TVFriend">Friend</string>
	<string name="TVFriends">Friends</string>
	<string name="TVMessage">Message</string>
	<string name="TVMessages">Messages</string>
	<string name="TVMessageList">>messages</string>
	<string name="TVFLProfile">Profile</string>
	<string name="TVMsg">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut.</string>
	<string name="TVErrPassword">Your passwords do not match. Please re-enter your password.</string>
	<string name="TVErrPassword2">Please enter your password.</string>
	<string name="TVErrUsername">Your username must be at least 3 characters long.</string>
	<string name="TVErrUsername2">Please enter a recipient</string>
	<string name="TVErrUsername3">Please enter your username</string>
	<string name="TVErrEmail">You must use a valid Ryerson email (ryerson.ca or scs.ryerson.ca)</string>
	<string name="TVLookAround">Look Around</string>
	<string name="TVProgram">Program: Computer Science</string>
	<string name="TVLong">( Long coord,</string>
	<string name="TVLat">Lat coord )</string>
	<string name="TVNewMessage">>new message</string>
	<string name="TVProfile">>profile</string>
	<string name="TVUpdateStatus">Update Status</string>
	
	<!--  Content Description Strings -->
	<string name="CDDefault">default</string>
    <string name="CDLogo">logo</string>
    <string name="IBHome">home</string>
    <string name="IBFriend">friend</string>
    <string name="IBPref">preference</string>
    <string name="IBMsg">message</string>
    <string name="IBLook">look</string>
    <string name="IVDivisor">divider</string>
    <string name="IVProfilePic">profilepic</string>
    
    <!--  EditView Strings -->
    <string name="EVUsername">Username</string>
    <string name="EVPassword">Password</string>
    <string name="EVConfirmPassword">Confirm Password</string>
    <string name="EVEmail">E-mail</string>
    <string name="EVName">Name</string>
    <string name="EVBio">Whats happening?</string>
    <string name="EVBody">Write your message here</string>
    <string name="EVMsg">Writemsghere</string>
    <string name="EVRecipient">Recipient</string>
    
    <!--  Checkbox Strings -->
    <string name="CBSave">Save username and password</string>
</resources>
