<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#000000"
    android:orientation="vertical" >

    <Button
        android:id="@+id/BtnSocialiteListView"
        android:layout_height="0dip"
        android:layout_width="fill_parent"
        android:layout_weight="0.2"
        android:background="#DBDBDB"
        android:text="@string/BtnLookAround"
        android:layout_margin="10dip" />

	<Button
	    android:id="@+id/BtnMessages"
        android:layout_height="0dip"
        android:layout_width="fill_parent"
        android:layout_weight="0.2"
        android:background="#DBDBDB"
        android:text="@string/BtnMessages" 
        android:layout_margin="10dip"/>
    
	<Button
	    android:id="@+id/BtnFriendsList"
        android:layout_height="0dip"
        android:layout_width="fill_parent"
        android:layout_weight="0.2"
        android:background="#FFFFFF"
        android:text="@string/BtnFriendsList" 
        android:layout_margin="10dip"/>
	
	<Button
	    android:id="@+id/BtnPreferences"
        android:layout_height="0dip"
        android:layout_width="fill_parent"
        android:layout_weight="0.2"
        android:background="#DBDBDB"
        android:text="@string/BtnPreferences" 
        android:layout_margin="10dip"/>
		   
</LinearLayout>
