<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <!-- Menu Bar -->
	<LinearLayout
        android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="5dip"
		android:layout_marginBottom="5dip" 
		android:orientation="horizontal"
		android:background="#000000" >

        <ImageButton
            android:id="@+id/IBHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
			android:background="@android:color/transparent"
            android:src="@drawable/btn_rusocial"
        	android:contentDescription="@string/IBHome" />

   		<ImageButton
   			android:id="@+id/IBLook"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginLeft="20dp"
        	android:layout_marginTop="2dp"
			android:background="@android:color/transparent"
			android:contentDescription="@string/IBLook"
        	android:src="@drawable/btn_look" />
   
   		<ImageButton
        	android:id="@+id/IBMsg"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginLeft="20dp"
			android:background="@android:color/transparent"
			android:contentDescription="@string/IBMsg"
			android:layout_marginTop="5dp"
        	android:src="@drawable/btn_msg2" />

   		<ImageButton
        	android:id="@+id/IBFriend"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginLeft="20dp"
        	android:layout_marginTop="5dp"			
			android:background="@android:color/transparent"
			android:contentDescription="@string/IBFriend"
        	android:src="@drawable/btn_friends2" />

    	<ImageButton
        	android:id="@+id/IBPref"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginLeft="17dp"
        	android:layout_marginTop="3dp"
			android:background="@android:color/transparent"
			android:contentDescription="@string/IBPref"
        	android:src="@drawable/btn_prefs4" />
    
    </LinearLayout>
    
	<!-- Friend Content -->
    <LinearLayout
        android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="5dip"
		android:layout_marginBottom="5dip" 
		android:orientation="vertical"
		android:background="@drawable/bg_regular" >
    	
        <TextView
        	android:layout_width="wrap_content"
        	android:layout_weight="0.01"
        	android:layout_height="0dip"
        	android:layout_marginTop="5dip"
        	android:layout_marginLeft="5dip"
        	android:text="@string/TVFriendsList"        
        	android:textColor="#FFFFFF"
        	android:textSize="12sp" />
    	
   </LinearLayout>
		   
</LinearLayout>
