<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
   android:layout_height="wrap_content"
   android:gravity="left|center"
   android:layout_width="wrap_content"
   android:paddingBottom="5dp"
   android:paddingTop="5dp"
   android:paddingLeft="5dp"
   android:background="@drawable/btn_gray">

    <ImageView
       android:id="@+id/avatar"
       android:layout_width="wrap_content"
       android:layout_height="fill_parent"
       android:layout_marginRight="6dip"
       android:src="@drawable/profilepic_sm"
       android:background="@drawable/stroke_element"
       android:contentDescription="@string/IVProfilePic" />
    
    <LinearLayout
       android:orientation="vertical"
       android:layout_width="0dip"
       android:layout_weight="1"
       android:layout_height="fill_parent">
       
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TVName"
        android:gravity="center"
        android:textColor="#0380db"/>
    
     <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TVMsg"
        android:gravity="left"
        android:textColor="#9c9a9a"/>
    
    </LinearLayout>
</LinearLayout>
